fix scrollbar

--- a/Portfolio/src/components/NavBar/NavBar.scss
+++ b/Portfolio/src/components/NavBar/NavBar.scss
@@ -1,4 +1,5 @@
 .NavBar {
+  position: fixed;
   background-color: #fff;
   color: #000;
   z-index: 100;
