--- a/Portfolio/src/pages/Projects/Projects.scss
+++ b/Portfolio/src/pages/Projects/Projects.scss
@@ -1,8 +1,6 @@
 .Projects {
-  overflow: auto;
   .container {
     position: relative;
-    margin-top: 2rem;
     max-width: 80%;
   }
 }
