--- a/Portfolio/src/style/index.scss
+++ b/Portfolio/src/style/index.scss
@@ -92,11 +92,15 @@ a {
 .mt1 {
   margin-top: 1rem;
 }
+
 .mb1 {
   margin-bottom: 1rem;
 }
 .mt3 {
   margin-top: 3rem;
+}
+.mt15 {
+  margin-top: 1.5rem;
 }
 .mg1 {
   margin: 1rem;
@@ -115,6 +119,12 @@ a {
 }
 .pd15 {
   padding: 1.5rem;
+}
+.pdt25 {
+  padding-top: 2.5rem;
+}
+.pdb15 {
+  padding-bottom: 1.5rem;
 }
 .pdl1 {
   padding-left: 1rem;
